--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,40 @@
-<h1>
-  {{title}}
-</h1>
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <!--<a class="navbar-brand" [routerLink]="['/']">
+                <i class="fa fa-home fa-3x" aria-hidden="true"></i>
+            </a>-->
+            <a class="navbar-brand" href="#">Home</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav nav-pills">
+                <li>
+                    <a [routerLink]="['/skills']">Skill Setting</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+<br/>
+<!-- Page Content -->
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+<!--<footer class="navbar navbar-fixed-bottom">
+    <div class="text-center">
+        <h4 class="white">
+            <i>This web is for helping seeking a job in Canada...</i>
+        </h4>
+    </div>
+</footer>-->
