--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
                 <li>
                     <a [routerLink]="['/skills']">Skill Setting</a>
                 </li>
+                <li>
+                    <a [routerLink]="['/insight']">Insight</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
