--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,28 @@
 <!--<p-dataTable [value]="jobs" [rows]="pageSize" [totalRecords]="totalItems">-->
 <p-dataTable [value]="jobs" [paginator]="true" [lazy]="true" [rows]="pageSize" [totalRecords]="totalItems" (onLazyLoad)="loadJobsLazy($event)">
     <header>List of Jobs</header>
-    <p-column [style]="{'width':'8%'}" field="postAt" header="Post At">
+    <p-column [style]="{'width':'90px'}" field="postAt" header="Post At">
         <template let-job="rowData" let-i="rowIndex" pTemplate="body">
             <span>{{getPostDate(i)}}</span>
             <!--<span>{{job.postAt}}</span>-->
         </template>
     </p-column>
-    <p-column [style]="{'width':'38%'}" field="title" header="Job Title">
+    <p-column [style]="{'width':'420px'}" field="title" header="Job Title">
         <template let-job="rowData" let-i="rowIndex" pTemplate="body">
         <a target="_blank" href={{getUrl(i)}}>{{getTitle(i)}}</a>
         <!--<a target="_blank" href={ {job.url}}>{{job.title}}</a>-->
         </template>
     </p-column>
-    <p-column [style]="{'width':'26%'}" field="employer" header="Employer"></p-column>
-    <p-column [style]="{'width':'13%'}" field="province" header="Province"></p-column>
-    <p-column [style]="{'width':'15%'}" field="city" header="City"></p-column>
-    <!--<p-column field="url" header="Url"></p-column>-->
+    <!--<p-column [style]="{'width':'260px'}" field="employer" header="Employer"></p-column>
+    <p-column [style]="{'width':'150px'}" field="province" header="Province"></p-column>
+    <p-column [style]="{'width':'180px'}" field="city" header="City"></p-column>-->
+    <p-column *ngFor="let skill of selectedSkills" [header]="skill.name">
+        <template let-job="rowData" let-i="rowIndex" pTemplate="body">
+            <i *ngIf="hasSkill(i,skill.id)" class="fa fa-check" aria-hidden="true"></i>
+        </template>
+    </p-column>
 </p-dataTable>
+
+<div>
+    <p-checkbox *ngFor="let skill of skills" name="skill-delection" [value]="skill" [label]="skill.name" [(ngModel)]="selectedSkills"></p-checkbox>
+</div>
