--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,5 +1,33 @@
-<p-dataTable [value]="skills" [paginator]="true" [lazy]="true" [rows]="pageSize" [totalRecords]="totalItems" (onLazyLoad)="loadSkillsLazy($event)">
+<!--<p-dataTable [value]="skills" [paginator]="true" [lazy]="true" [rows]="pageSize" [totalRecords]="totalItems" (onLazyLoad)="loadSkillsLazy($event)">-->
+<p-growl [value]="msgs"></p-growl>
+<p-dataTable [value]="skills" selectionMode="single" [(selection)]="selectedSkill" (onRowSelect)="onRowSelect($event)" [rows]="20" [paginator]="true">
     <header>List of Target skills</header>
-    <p-column field="name" header="Skill Name"></p-column>
+    <p-column field="name" header="Skill Name" [filter]="true" filterMatchMode="contains"></p-column>
     <p-column field="keyWords" header="Key Words"></p-column>
+    <footer>
+
+    </footer>
 </p-dataTable>
+<div class="ui-helper-clearfix" style="width:100%">
+    <button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add"></button>
+</div>
+
+<p-dialog header="Skill Details" [(visible)]="displayDialog" width="600" [responsive]="true" showEffect="fade" [modal]="true">
+    <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="skill">
+        <div class="ui-grid-row">
+            <div class="ui-grid-col-4"><label for="name">Name</label></div>
+            <div class="ui-grid-col-8"><input pInputText id="name" [(ngModel)]="skill.name" /></div>
+        </div>
+        <div class="ui-grid-row">
+            <div class="ui-grid-col-4"><label for="keywords">Key Words</label></div>
+            <div class="ui-grid-col-8"><input pInputText id="keywords" [(ngModel)]="skill.keyWords" /></div>
+        </div>
+        <p-checkbox [(ngModel)]="skill.isReg" binary="true" label="IsReg"></p-checkbox>
+    </div>
+    <footer>
+        <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+            <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
+            <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
+        </div>
+    </footer>
+</p-dialog>
