--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,9 +20,13 @@
     <!--<p-column [style]="{'width':'260px'}" field="employer" header="Employer"></p-column>
     <p-column [style]="{'width':'150px'}" field="province" header="Province"></p-column>
     <p-column [style]="{'width':'180px'}" field="city" header="City"></p-column>-->
-    <p-column *ngFor="let skill of selectedSkills" [header]="skill.name">
+    <p-column styleClass="skill-stars" *ngFor="let skill of selectedSkills" [header]="skill.name">
         <template let-job="rowData" let-i="rowIndex" pTemplate="body">
-            <i *ngIf="hasSkill(i,skill.id)" class="fa fa-check" aria-hidden="true"></i>
+            <span>  
+                <i *ngIf="getRequriedSkillLevel(i,skill.id) == 1" class="fa fa-star-half-o" aria-hidden="true"></i>
+                <i *ngIf="getRequriedSkillLevel(i,skill.id) > 1" class="fa fa-star" aria-hidden="true"></i>
+                <i *ngIf="getRequriedSkillLevel(i,skill.id) > 2" class="fa fa-star" aria-hidden="true"></i>
+            </span>
         </template>
     </p-column>
 
