add home page, move jobs to jobboard component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav nav-pills">
                 <li>
-                    <a [routerLink]="['/skills']">Skill Setting</a>
+                    <a [routerLink]="['/jobs']">Job Board</a>
+                </li>
+                <li>
+                    <a [routerLink]="['/skills']">Skills</a>
                 </li>
                 <li>
                     <a [routerLink]="['/insight']">Insight</a>
