--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Job Board</h1>
-        <p>This is a hobby project for practicing ASP.Net Core(on Linux) + Angular2 + Python. It automatically retrieves job opportunities from several websites, analyze the requirement description, extract required competencies and level of experience,
+        <p>This is CG's hobby project for practicing ASP.Net Core(on Linux) + Angular2 + Python. It automatically retrieves job opportunities from several websites, analyze the requirement description, extract required competencies and level of experience,
             display in a "car comparison" way.</p>
         <p><a class="btn btn-primary btn-lg" href="https://github.com/CG0323/jobboard" role="button">Github &raquo;</a></p>
     </div>
