--- a/src/app/insight/insight.component.html
+++ b/src/app/insight/insight.component.html
@@ -1,2 +1,3 @@
 <button pButton type="button" label="Update" (click)="update(chart)"></button>
-<p-chart #chart *ngIf="showPlot" type="bar" [options]="options" [data]="data"></p-chart>
+<!--<p-chart #chart *ngIf="showPlot" type="bar" [options]="options" [data]="data"></p-chart>-->
+<p-chart #chart type="bar" [options]="options" [data]="data"></p-chart>
