--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url("../node_modules/.4.7.0@font-awesome/css/font-awesome.min.css");
-@import url("../node_modules/.3.3.7@bootstrap/dist/css/bootstrap.css");
+@import url("../node_modules/font-awesome/css/font-awesome.min.css");
+@import url("../node_modules/bootstrap/dist/css/bootstrap.css");
 @import url('../node_modules/primeng/resources/primeng.min.css');
 @import url('../node_modules/primeng/resources/themes/omega/theme.css');
 body {
