minor change on menus

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Job Board</h1>
-        <p>This is a hobby project for practicing ASP.Net Core(on Linux) + Angular2 + Python. It automatically retrieves job opportunities from several websites, analyze the requirement description, extract required competencies and level of experience,
-            display in a "car comparison" way.</p>
+        <p>This is a full stack project built on ASP.Net Core(on Linux) + Angular2 + Python. It automatically retrieves Canadian job opportunities from several websites, analyze the requirement description, extract required competencies and level of experience, display the results in a "car comparison" way</p>
+        <p><a class="btn btn-primary btn-lg" [routerLink]="['/jobs']" role="button">Job Board</a></p>
         <p><a class="btn btn-primary btn-lg" href="https://github.com/CG0323/jobboard" role="button">Github &raquo;</a></p>
     </div>
 </div>
@@ -21,7 +21,7 @@
         <div class="col-md-3">
             <h2>jobboard.frontend</h2>
             <p>Angular2 single page application, deployed on Nginx. Users can view the latest job opportunities in a "Car Comparison" way, quickly view the required competencies before openning the detailed job page. Skill columns are customizable. Users
-                can also add/edit skill detecting rules. Some statistic features are also available.</p>
+                can also add/edit skill detecting rules.</p>
         </div>
         <div class="col-md-3">
             <h2>jobboard.analyzer</h2>
